# ReceiptAnalyzerPipeline

./: .gitignore  README.md  alembic.ini  aws_lambda_fn.py  mypy.ini  output-7e7.json  output-7ff.json  output.json  output1.json  package_aws_lambda.sh  pyproject.toml
anarcpt/: anarcptlib.py  cli.py  config.py  db.py  exceptions.py  main.py  models.py  watcher.py
migrations/: env.py
migrations/versions/: e5c6e71f62a6_initial_migration.py
